# miniature-giggle

./: .gitignore  LICENSE  README.md  prueba.ipynb  prueba.py  pydoctest.json  pyproject.toml  settings.yaml
.gemini/: GEMINI.md
.github/: copilot-instructions.md
scripts/: activate.ps1  build.ps1  check-deps.ps1  check-diff.ps1  cleanup.ps1  compile.ps1  deploy-edit.ps1  find-deps.ps1  init.ps1  install.ps1  lint.ps1  make-cov.ps1  make.ps1  pipeline.txt  report-cov.ps1  run.ps1
src/tfg/: __init__.py  datafiles.py  dataset.py  info.py  progress.py  storage_driver.py  utils.py
src/tfg/config/: secrets.json
src/tfg/signal/: __init__.py  detrend.py  normalize.py
src/tfg/storage/: __init__.py  storage_driver.py  utils.py
src/tfg/storage/backend/: __init__.py  aws.py  base.py  colab.py  filesystem.py  gcs.py  gdrive.py  google.py  kaggle.py  local.py  ncei.py
src/tfg/storage/cache/: __init__.py  base.py  dummy.py  gdrive.py  simple.py  timed.py
src/tfg/storage/connector/: __init__.py  base.py  colab.py  colab_drive.py  local.py
src/tfg/storage/core/: __init__.py  aws.py  colab.py  factory.py  gcs.py  gcsauth.py  gdauth.py  gdrive.py  google.py  gutils.py  handlers.py  kaggle.py  local.py  ncei.py  session.py  utils.py
src/tfg/storage/datasource/: __init__.py  base.py  context.py  dataservice.py  datasource.py  utils.py
src/tfg/storage/filehandler/: __init__.py  file_handler.py  file_handler_interface.py  numpy_file_handler.py  pickle_file_handler.py
src/tfg/storage/filesystem/: __init__.py  base_filesystem_mounter.py  colab_filesystem_mounter.py  colab_mounter.py  filesystem_mounter.py  local_filesystem_mounter.py
src/tfg/storage/handler/: __init__.py  base.py  bypass.py  csv.py  json.py  njson.py  numpy.py  pickle.py  yaml.py
src/tfg/storage/handlers/: __init__.py  base.py  numpy.py  pickle.py
src/tfg/storage/mapper/: __init__.py  aws.py  base.py  gcs.py  gdrive.py  generic.py  google.py  kaggle.py  ncei.py  path.py
src/tfg/storage/uri/: __init__.py  base.py  composer.py  generic.py  google.py  native.py  path.py  user.py
src/tfg/trackers/: __init__.py  event_track.py  file_parser.py  hurdat2.py  track_info.py  track_parser.py  tracker.py  tracker_stock.py  utility.py  validation.py
typings/IPython/core/: getipython.pyi
typings/google/auth/: __init__.pyi  _default.pyi  credentials.pyi
typings/google/cloud/storage/: __init__.pyi
typings/google/colab/: __init__.pyi  auth.pyi  drive.pyi  files.pyi
typings/google/oauth2/: credentials.pyi
typings/google_auth_httplib2/: __init__.pyi
typings/google_auth_oauthlib/: flow.pyi
