# Your project configuration
[project]
  authors = [{ name = "Waldemar Villamayor-Venialbo", email = "wvenialbo@fpuna.edu.py" }]

  # The PyPI classifiers for your project
  classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    # "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
  ]

  # The dependencies for your project
  dependencies = [
    "boto3",
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-cloud-storage",
    "gudhi",
    "matplotlib",
    "numpy",
    "pandas",
    "platformdirs",
    "pyyaml",
    "requests",
    "scipy",
    "seaborn",
    "tqdm",
  ]

  # The description for your project
  description = "TFG-WVV — Código del proyecto de Trabajo de Fin de Grado"

  # The version for your project (will be dynamically updated)
  dynamic = ["version"]

  # The keywords for your project
  keywords = [
    "climate",
    "meteorology",
    "oceanography",
    "atmospheric science",
    "planetary science",
    "geodesy",
    "science",
    "satellite imagery",
    "environmental data",
    "severe weather",
    "GOES",
    "GOES-R",
    "GridSat",
    "GridSat-B1",
    "GridSat-CONUS",
    "GridSat-GOES",
    "GridSat-GOES/CONUS",
    "netcdf",
    "data",
    "dataset",
    "downloader",
    "multi-source",
  ]

  # The license for your project
  license       = "MIT"
  license-files = ["LICENSE"]

  # The name of your project on PyPI
  name = "tfg-wvv"

  # The README file for your project
  readme = { file = "README.md", content-type = "text/markdown" }

  # The minimum version of Python required to run your project
  requires-python = ">=3.10"

  [project.optional-dependencies]
    dev = [
      # QC tools
      "mypy",
      "pyright",
      "ruff",

      # Docstrings QC tools
      "pydoclint", # remove when ruff declares support for DOC rules
      "pydoctest",

      # Testing
      "coverage[toml]",
      "pytest",

      # Stubs
      "boto3-stubs[s3]",
      "google-api-python-client-stubs",
      "google-auth-stubs",
      "types-python-dateutil",
      "types-requests",
      "types-tqdm",
    ]

  [project.urls]
    # Homepage = "https://example.com"
    # Documentation = "https://readthedocs.org"
    Issues     = "https://github.com/wvenialbo/tfg-wvv/issues"
    Repository = "https://github.com/wvenialbo/tfg-wvv"
    # Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

    # Your development tools configuration

[build-system]
  build-backend = "setuptools.build_meta"
  requires      = ["setuptools-scm", "setuptools"]

[tool]
  [tool.setuptools]
    include-package-data = true

    [tool.setuptools.package-data]
      tfg          = ["py.typed"]
      "tfg.config" = ["secrets.json"]

    [tool.setuptools.packages.find]
      where   = ["src"]
      include = ["tfg*"]

  [tool.setuptools_scm]

  [tool.coverage]

    [tool.coverage.run]
      source = ["tfg"]
      omit   = [".ipynb_checkpoints/*", ".venv/*", ".vscode/*", "htmlcov/*", "tests/*", "var/*"]

    [tool.coverage.report]
      show_missing = true
      precision    = 2
      fail_under   = 80

  [tool.mypy]
    # Introduce stricter options
    strict         = true
    python_version = "3.13"

    # Start off with these
    warn_redundant_casts = true
    warn_unused_configs  = true
    warn_unused_ignores  = true

    # Getting these passing should be easy
    strict_concatenate = true
    strict_equality    = true

    # Strongly recommend enabling this one as soon as you can
    check_untyped_defs = true

    # These shouldn't be too much additional work, but may be tricky to
    # get passing if you use a lot of untyped libraries
    disallow_any_generics       = true
    disallow_subclassing_any    = true
    disallow_untyped_decorators = true

    # These next few are various gradations of forcing use of type annotations
    disallow_incomplete_defs = true
    disallow_untyped_calls   = true
    disallow_untyped_defs    = true

    # This one isn't too hard to get passing, but return on investment is lower
    no_implicit_reexport = true

    # This one can be tricky to get passing if you use a lot of untyped
    # libraries. Disabling this prevents untyped libraries from polluting
    # your type system with Any
    warn_return_any = false

    # Custom type stubs
    mypy_path = "$MYPY_CONFIG_FILE_DIR/typings"

    # Arguments migrated from settings.json:
    follow_imports         = "silent"
    follow_untyped_imports = false

    # Ignore import errors globally for libraries without stubs
    ignore_missing_imports = false

    disable_error_code = []

    exclude = [
      '.*/\.venv',              # Equivalent to **/.venv
      '.*/__pycache__',         # Equivalent to **/__pycache__
      '.*/\.mypy_cache',        # Equivalent to **/.mypy_cache
      '.*/\.ruff_cache',        # Equivalent to **/.ruff_cache
      '.*/\.pytest_cache',      # Equivalent to **/.pytest_cache
      '.*/\.ipynb_checkpoints', # Equivalent to **/.ipynb_checkpoints
      '.*/experimental',        # Equivalent to **/experimental
    ]

    # We enforce that our own packages are always validated strictly
    [[tool.mypy.overrides]]
      module                 = "tfg.*"
      disallow_untyped_defs  = true
      ignore_missing_imports = false

    # Safety net only for known third parties who do not have stubs
    [[tool.mypy.overrides]]
      module                 = ["google.*"]
      follow_imports         = "skip"
      follow_untyped_imports = true
      ignore_missing_imports = true
      # This prevents mypy from attempting to validate inside google-*,
      # treating it as Any securely only at the boundary of your code.

  [tool.pyright]
    pythonVersion    = "3.13"
    typeCheckingMode = "strict"

    indexing = true
    stubPath = "./typings"

    executionEnvironments = [{ root = "./src" }]

    # Configuraciones de inferencia estricta
    strictDictionaryInference = true
    strictListInference       = true
    strictSetInference        = true

    # Otras configuraciones de evaluación de tipos
    deprecateTypingAliases     = true
    enableReachabilityAnalysis = true
    useLibraryCodeForTypes     = true # follow_untyped_imports = false

    # Ajustes de severidad de diagnósticos
    reportImplicitStringConcatenation  = "none"  # strict_concatenate
    reportMissingImports               = "error" # ignore_missing_imports = false
    reportMissingModuleSource          = "none"
    reportMissingParameterType         = "error" # disallow_incomplete_defs
    reportMissingTypeStubs             = "none"
    reportUnknownMemberType            = "none"
    reportUnknownVariableType          = "none"
    reportUnnecessaryCast              = "error" # warn_redundant_casts = true
    reportUnnecessaryIsInstance        = "none"
    reportUnnecessaryTypeIgnoreComment = "error" # warn_unused_ignores
    reportUntypedBaseClass             = "error" # disallow_subclassing_any
    reportUntypedFunctionDecorator     = "error" # disallow_untyped_decorators

    exclude = [
      "**/.venv",
      "**/__pycache__",
      "**/.mypy_cache",
      "**/.ruff_cache",
      "**/.pytest_cache",
      "**/.ipynb_checkpoints",
      "**/experimental",
    ]

    ignore = ["**/experimental"]

  [tool.pydoclint]
    style                = 'numpy'
    allow-init-docstring = true

  [tool.ruff]
    preview     = true
    line-length = 79

    exclude = [
      ".venv",
      "__pycache__",
      ".mypy_cache",
      ".ruff_cache",
      ".pytest_cache",
      ".ipynb_checkpoints",
      "experimental",
    ]

    extend-include = ["*.ipynb"]

    [tool.ruff.format]
      docstring-code-format      = true
      docstring-code-line-length = 72
      quote-style                = "double"

    [tool.ruff.lint]

      select = [
        "B",   # flake8-bugbear (bugs/performance)
        "D",   # pydocstyle (docstrings)
        "E",   # pycodestyle (style)
        "F",   # pyflakes (logic/imports)
        "I",   # isort (import sorting)
        "S",   # bandit (security)
        "W",   # pycodestyle (warnings)
        "PL",  # pylint (logic/design)
        "UP",  # pyupgrade (modernise)
        "ANN", # flake8-annotations (type annotations)
        "DOC", # pydoclint (docstrings)
        "ERA", # eradicate (detecta código comentado)
        "RUF", # ruff-specific rules
      ]

      ignore = [
        "D100",    # Missing docstring in public module
        "D101",    # Missing docstring in public class
        "D102",    # Missing docstring in public method
        "D103",    # Missing docstring in public function
        "D104",    # Missing docstring in public package
        "D105",    # Missing docstring in magic method
        "PLC0415", # `import` should be at the top-level of a file
      ]

      fixable   = ["ALL"]
      unfixable = []

      [tool.ruff.lint.isort]
        combine-as-imports      = true
        known-first-party       = ["tfg"]
        section-order           = ["future", "standard-library", "third-party", "first-party", "local-folder"]
        force-single-line       = false
        lines-after-imports     = 2
        split-on-trailing-comma = false

      [tool.ruff.lint.pycodestyle]
        max-line-length               = 79
        max-doc-length                = 72
        ignore-overlong-task-comments = false

      [tool.ruff.lint.pydocstyle]
        convention = "numpy"

      [tool.ruff.lint.extend-per-file-ignores]
        "tests/**/*.py" = ["D"] # Do not request docstrings in test files
